--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="66dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/toNextPoint"
+        android:id="@+id/tonextpoint"
         android:layout_gravity="center_horizontal|top" />
 
 </FrameLayout>
